Fix layout bug introduced in redesign

--- a/scss/partials/_highlight.scss
+++ b/scss/partials/_highlight.scss
@@ -1,12 +1,11 @@
 
 .highlight {
-   margin: 0;
-   background: #fff
+  margin: 0;
 }
 
 .highlight .c {
-    color: #998;
-    font-style: italic
+  color: #998;
+  font-style: italic;
 }
 
 .highlight .err {
